[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aichatbot"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "An AI-powered chat bot using modern language models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "typer>=0.9.0",
    "rich>=13.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/username/aichatbot"
"Bug Tracker" = "https://github.com/username/aichatbot/issues"

[project.scripts]
chatbot = "aichatbot.cli:main" 